--- a/package.json
+++ b/package.json
@@ -83,5 +83,8 @@
     "unbuild": "0.7.4",
     "vite": "2.9.13",
     "vitest": "0.16.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
